tests/errors/e_func_in_pxd_support.pxd
cdef foo():
    return 1
